fixed: download button alignment -  2

--- a/css/styles.css
+++ b/css/styles.css
@@ -155,7 +155,6 @@
   text-align: center !important;
   text-decoration: none !important;
   vertical-align: middle !important;
-  width: 100% !important;
   height: 52.1094px !important;
   transition: background 0.3s, box-shadow 0.3s, color 0.3s !important;
   display: inline-block !important;
